# local-stt

./: .gitattributes  .gitignore  BUILD.md  EVALUATION.md  LocalWhisperDictation.spec  LocalWhisperDictationConsole.spec  PLAN.md  README-LINUX.md  README.md  REVIEW.md  STABLE_VERSION.md  STATUS.md  TESTING.md  TODO.md  TROUBLESHOOTING.md  VISION.md  app_launcher.py  install.bat  pyproject.toml  requirements.txt  run.bat
archive/2026-06-03-v0.1-stable-lock/: EVALUATION.archived.md  PLAN.archived.md  REVIEW.archived.md  STATUS.archived.md  TODO.archived.md
docs/: UBUNTU.md
docs/superpowers/specs/: 2026-06-21-history-ui-design.md
packaging/: README.md
packaging/linux/: build_deb.sh  build_rpm.sh  build_wheelhouse.sh  local-dictation.sh  local-whisper-dictation.desktop  postinst.sh  postrm.sh  validate_ubuntu.sh
packaging/profiles/: cpu-small-en.json  gpu-large-v3.json
packaging/windows/: build.ps1  create_distribution_zip.ps1  install_current_user.ps1  uninstall_current_user.ps1
scripts/: build_onedir.ps1  create_startup_shortcut.ps1  download_large_v3.ps1  download_model.ps1  remove_startup_shortcut.ps1
src/local_dictation/: __init__.py  __main__.py  audio.py  config.py  controller.py  diagnostics.py  history.py  history_window.py  inserter.py  log.py  overlay.py  single_instance.py  text.py  transcriber.py  tray_app.py
tests/: test_audio.py  test_config.py  test_controller_retry.py  test_diagnostics.py  test_history.py  test_history_window.py  test_inserter.py  test_overlay.py  test_single_instance.py  test_text.py  test_transcriber.py
