[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-whisper-dictation"
version = "0.1.0"
description = "Local Windows tray dictation app using faster-whisper and CUDA."
requires-python = ">=3.11"
dependencies = [
  "faster-whisper",
  "sounddevice",
  "numpy",
  "pyperclip",
  "keyboard",
  "PySide6",
]

[project.scripts]
local-dictation = "local_dictation.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
